--- a/orders/sepa-export/api-reference/api.yml
+++ b/orders/sepa-export/api-reference/api.yml
@@ -262,7 +262,7 @@ components:
         - message
   responses:
     BadRequest_400:
-      description: Request syntactically incorrect. Any details will be provided within the response payload.
+      description: Request syntactically incorrect. Details of the error are included in the response payload.
       content:
         application/json:
           schema:
