--- a/products-labels-and-brands/brand-service/api-reference/api.yml
+++ b/products-labels-and-brands/brand-service/api-reference/api.yml
@@ -504,7 +504,7 @@ components:
       description: Schema for API-specific errors.
   responses:
     trait_400:
-      description: Request syntactically incorrect. Any details will be provided within the response payload.
+      description: Request syntactically incorrect. Details of the error are included in the response payload.
       content:
         application/json:
           schema:
@@ -546,7 +546,7 @@ components:
                 resourceId: 55421f3b6ecea7b1a3b73d26
     trait_409:
       description: |
-        Creation failed because there was a conflict with another resource. Any details will be provided within the response payload.
+        Creation failed because there was a conflict with another resource. Details of the error are included in the response payload.
       content:
         application/json:
           schema:
