--- a/quotes/quote/api-reference/api.yaml
+++ b/quotes/quote/api-reference/api.yaml
@@ -1509,6 +1509,7 @@ components:
         - product
     QuoteItemsReplaceUpdate:
       type: array
+      description: Quote item Id.
       items:
         $ref: '#/components/schemas/QuoteItemUpdate'
         properties:
@@ -2146,10 +2147,10 @@ components:
               - '/metadata/{mixinsPath}'
             type: string
           newValue:
-            description: New value after the update
+            description: New value after the update.
             $ref: '#/components/schemas/QuoteUpdateValues'
           previousValue:
-            description: Value before update
+            description: Value before update.
             $ref: '#/components/schemas/QuoteUpdateValues'
           userId:
             type: string
@@ -2166,7 +2167,7 @@ components:
               - CUSTOMER
               - SYSTEM
             type: string
-          modifedAt:
+          modifiedAt:
             type: string
             description: Modification date
     QuoteCreateFromCartRequest:
